Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <a id="1-create-class-and-annotate-fields-with-column" class="anchor" href="#1-create-class-and-annotate-fields-with-column" aria-hidden="true"><span class="octicon octicon-link"></span></a>1. Create class, and annotate fields with <a href="https://github.com/Column" class="user-mention">@Column</a>
 </h4>
 
-<p>We want run a query to select all users and map, the results to a User class. So we first defined a user class</p>
+<p>We want to run a query to select all users and map the results to a User class. So we first defined a user class</p>
 
 <pre><code>public class User {
    @Column
